# trading-journal

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: dev_run.sh
src/trade_journal/ai/: checklist_a_plus.py  openai_review.py  openai_review.py.backup
src/trade_journal/analytics/: charts.py  kpis.py
src/trade_journal/app/: main.py  utils.py
src/trade_journal/app/pages/: 1_Dashboard.py  2_Operaciones.py  3_Sesiones.py  4_Importar.py  5_Review.py  6_Review_Semanal.py
src/trade_journal/data/: repositories.py  supabase_client.py
src/trade_journal/domain/: models.py
src/trade_journal/infra/storage/: __init__.py  base.py  github.py
supabase/migrations/: 001_init.sql  002_ai_reviews.sql
